EXTRA_DIST = bdmpolyfromtext10.testcase \
	bdmpolyfromtext13.testcase \
	bdmpolyfromtext14.testcase \
	bdmpolyfromtext15.testcase \
	bdmpolyfromtext16.testcase \
	bdmpolyfromtext17.testcase \
	bdmpolyfromtext1.testcase \
	bdmpolyfromtext2.testcase \
	bdmpolyfromtext3.testcase \
	bdmpolyfromtext4.testcase \
	bdmpolyfromtext9.testcase \
	bdmpolyfromwkb10.testcase \
	bdmpolyfromwkb11.testcase \
	bdmpolyfromwkb12.testcase \
	bdmpolyfromwkb13.testcase \
	bdmpolyfromwkb14.testcase \
	bdmpolyfromwkb15.testcase \
	bdmpolyfromwkb16.testcase \
	bdmpolyfromwkb17.testcase \
	bdmpolyfromwkb18.testcase \
	bdmpolyfromwkb19.testcase \
	bdmpolyfromwkb1.testcase \
	bdmpolyfromwkb2.testcase \
	bdmpolyfromwkb3.testcase \
	bdmpolyfromwkb4.testcase \
	bdmpolyfromwkb5.testcase \
	bdmpolyfromwkb6.testcase \
	bdmpolyfromwkb7.testcase \
	bdmpolyfromwkb8.testcase \
	bdmpolyfromwkb9.testcase \
	bdpolyfromtext10.testcase \
	bdpolyfromtext11.testcase \
	bdpolyfromtext12.testcase \
	bdpolyfromtext13.testcase \
	bdpolyfromtext14.testcase \
	bdpolyfromtext15.testcase \
	bdpolyfromtext16.testcase \
	bdpolyfromtext1.testcase \
	bdpolyfromtext2.testcase \
	bdpolyfromtext3.testcase \
	bdpolyfromtext4.testcase \
	bdpolyfromtext5.testcase \
	bdpolyfromtext6.testcase \
	bdpolyfromtext7.testcase \
	bdpolyfromtext8.testcase \
	bdpolyfromtext9.testcase \
	bdpolyfromwkb10.testcase \
	bdpolyfromwkb11.testcase \
	bdpolyfromwkb12.testcase \
	bdpolyfromwkb13.testcase \
	bdpolyfromwkb14.testcase \
	bdpolyfromwkb15.testcase \
	bdpolyfromwkb16.testcase \
	bdpolyfromwkb17.testcase \
	bdpolyfromwkb18.testcase \
	bdpolyfromwkb19.testcase \
	bdpolyfromwkb1.testcase \
	bdpolyfromwkb2.testcase \
	bdpolyfromwkb3.testcase \
	bdpolyfromwkb4.testcase \
	bdpolyfromwkb5.testcase \
	bdpolyfromwkb6.testcase \
	bdpolyfromwkb7.testcase \
	bdpolyfromwkb8.testcase \
	bdpolyfromwkb9.testcase \
	boundary1.testcase \
	boundary2.testcase \
	boundary3.testcase \
	boundary4.testcase \
	boundary5.testcase \
	boundary6.testcase \
	boundary7.testcase \
	boundary8.testcase \
	boundary9.testcase \
	buffer10.testcase \
	buffer1.testcase \
	buffer2.testcase \
	buffer3.testcase \
	buffer4.testcase \
	buffer5.testcase \
	buffer6.testcase \
	buffer7.testcase \
	buffer8.testcase \
	buffer9.testcase \
	buildarea1.testcase \
	buildarea2.testcase \
	buildarea3.testcase \
	buildarea4.testcase \
	buildarea5.testcase \
	buildarea6.testcase \
	centroid1.testcase \
	centroid2.testcase \
	centroid3.testcase \
	centroid4.testcase \
	centroid5.testcase \
	centroid6.testcase \
	centroid7.testcase \
	centroid8.testcase \
	convexhull10.testcase \
	convexhull1.testcase \
	convexhull2.testcase \
	convexhull3.testcase \
	convexhull4.testcase \
	convexhull5.testcase \
	convexhull6.testcase \
	convexhull7.testcase \
	convexhull8.testcase \
	convexhull9.testcase \
	difference10.testcase \
	difference11.testcase \
	difference12.testcase \
	difference1.testcase \
	difference2.testcase \
	difference3.testcase \
	difference4.testcase \
	difference6.testcase \
	difference7.testcase \
	difference8.testcase \
	difference9.testcase \
	distance10.testcase \
	distance1.testcase \
	distance2.testcase \
	distance3.testcase \
	distance4.testcase \
	distance5.testcase \
	distance6.testcase \
	distance7.testcase \
	distance8.testcase \
	distance9.testcase \
	intersection10.testcase \
	intersection11.testcase \
	intersection12.testcase \
	intersection1.testcase \
	intersection2.testcase \
	intersection3.testcase \
	intersection4.testcase \
	intersection5.testcase \
	intersection6.testcase \
	intersection7.testcase \
	intersection8.testcase \
	intersection9.testcase \
	isclosed10.testcase \
	isclosed1.testcase \
	isclosed2.testcase \
	isclosed3.testcase \
	isclosed4.testcase \
	isclosed5.testcase \
	isclosed6.testcase \
	isclosed7.testcase \
	isclosed8.testcase \
	isclosed9.testcase \
	isring1.testcase \
	isring2.testcase \
	isring3.testcase \
	isring4.testcase \
	isring5.testcase \
	isring6.testcase \
	isring7.testcase \
	isring8.testcase \
	isring9.testcase \
	issimple1.testcase \
	issimple2.testcase \
	issimple3.testcase \
	issimple4.testcase \
	issimple5.testcase \
	issimple6.testcase \
	isvalid10.testcase \
	isvalid11.testcase \
	isvalid12.testcase \
	isvalid13.testcase \
	isvalid14.testcase \
	isvalid15.testcase \
	isvalid16.testcase \
	isvalid17.testcase \
	isvalid18.testcase \
	isvalid19.testcase \
	isvalid1.testcase \
	isvalid20.testcase \
	isvalid2.testcase \
	isvalid3.testcase \
	isvalid4.testcase \
	isvalid5.testcase \
	isvalid6.testcase \
	isvalid7.testcase \
	isvalid8.testcase \
	isvalid9.testcase \
	pointonsurface1.testcase \
	pointonsurface2.testcase \
	pointonsurface3.testcase \
	pointonsurface4.testcase \
	pointonsurface5.testcase \
	pointonsurface6.testcase \
	pointonsurface7.testcase \
	polygonize10.testcase \
	polygonize11.testcase \
	polygonize12.testcase \
	polygonize13.testcase \
	polygonize14.testcase \
	polygonize1.testcase \
	polygonize2.testcase \
	polygonize3.testcase \
	polygonize4.testcase \
	polygonize5.testcase \
	polygonize6.testcase \
	polygonize7.testcase \
	polygonize8.testcase \
	polygonize9.testcase \
	ptdistancewithin10.testcase \
	ptdistancewithin11.testcase \
	ptdistancewithin12.testcase \
	ptdistancewithin13.testcase \
	ptdistancewithin14.testcase \
	ptdistancewithin15.testcase \
	ptdistancewithin16.testcase \
	ptdistancewithin17.testcase \
	ptdistancewithin18.testcase \
	ptdistancewithin1.testcase \
	ptdistancewithin2.testcase \
	ptdistancewithin3.testcase \
	ptdistancewithin4.testcase \
	ptdistancewithin5.testcase \
	ptdistancewithin6.testcase \
	ptdistancewithin7.testcase \
	ptdistancewithin8.testcase \
	ptdistancewithin9.testcase \
	ptdistwithin10.testcase \
	ptdistwithin11.testcase \
	ptdistwithin12.testcase \
	ptdistwithin13.testcase \
	ptdistwithin14.testcase \
	ptdistwithin15.testcase \
	ptdistwithin16.testcase \
	ptdistwithin1.testcase \
	ptdistwithin2.testcase \
	ptdistwithin3.testcase \
	ptdistwithin4.testcase \
	ptdistwithin5.testcase \
	ptdistwithin6.testcase \
	ptdistwithin7.testcase \
	ptdistwithin8.testcase \
	ptdistwithin9.testcase \
	relate1.testcase \
	relate2.testcase \
	relate3.testcase \
	relate4.testcase \
	relate5.testcase \
	relate6.testcase \
	relate7.testcase \
	relate8.testcase \
	relate9.testcase \
	relations1.testcase \
	relations2.testcase \
	relations3.testcase \
	relations4.testcase \
	relations5.testcase \
	relations6.testcase \
	relations7.testcase \
	relations8.testcase \
	routing6.testcase \
	simplify10.testcase \
	simplify11.testcase \
	simplify12.testcase \
	simplify13.testcase \
	simplify14.testcase \
	simplify15.testcase \
	simplify16.testcase \
	simplify1.testcase \
	simplify2.testcase \
	simplify3.testcase \
	simplify4.testcase \
	simplify5.testcase \
	simplify6.testcase \
	simplify7.testcase \
	simplify8.testcase \
	simplify9.testcase \
	st_area1.testcase \
	st_area2.testcase \
	st_area3.testcase \
	st_area4.testcase \
	st_area5.testcase \
	st_area6.testcase \
	st_area7.testcase \
	st_area8.testcase \
	st_area9.testcase \
	st_length10.testcase \
	st_length11.testcase \
	st_length12.testcase \
	st_length13.testcase \
	st_length14.testcase \
	st_length15.testcase \
	st_length16.testcase \
	st_length17.testcase \
	st_length18.testcase \
	st_length1.testcase \
	st_length2.testcase \
	st_length3.testcase \
	st_length4.testcase \
	st_length5.testcase \
	st_length6.testcase \
	st_length7.testcase \
	st_length8.testcase \
	st_length9.testcase \
	st_perimeter10.testcase \
	st_perimeter11.testcase \
	st_perimeter12.testcase \
	st_perimeter13.testcase \
	st_perimeter14.testcase \
	st_perimeter15.testcase \
	st_perimeter16.testcase \
	st_perimeter17.testcase \
	st_perimeter18.testcase \
	st_perimeter1.testcase \
	st_perimeter2.testcase \
	st_perimeter3.testcase \
	st_perimeter4.testcase \
	st_perimeter5.testcase \
	st_perimeter6.testcase \
	st_perimeter7.testcase \
	st_perimeter8.testcase \
	st_perimeter9.testcase \
	symdifference10.testcase \
	symdifference11.testcase \
	symdifference1.testcase \
	symdifference2.testcase \
	symdifference3.testcase \
	symdifference4.testcase \
	symdifference5.testcase \
	symdifference6.testcase \
	symdifference7.testcase \
	symdifference8.testcase \
	symdifference9.testcase \
	union10.testcase \
	union11.testcase \
	union12.testcase \
	union13.testcase \
	union14.testcase \
	union15.testcase \
	union16.testcase \
	union17.testcase \
	union18.testcase \
	union19.testcase \
	union1.testcase \
	union20.testcase \
	union21.testcase \
	union22.testcase \
	union23.testcase \
	union24.testcase \
	union25.testcase \
	union26.testcase \
	union27.testcase \
	union28.testcase \
	union29.testcase \
	union2.testcase \
	union3.testcase \
	union4.testcase \
	union5.testcase \
	union6.testcase \
	union7.testcase \
	union8.testcase \
	union9.testcase 
