
EXTRA_DIST = blobfromfile1.testcase \
	blobfromfile2.testcase \
	blobfromfile3.testcase \
	blobfromfile4.testcase \
	blobtofile1.testcase \
	blobtofile2.testcase \
	blobtofile3.testcase \
	blobtofile4.testcase \
	isXblob1.testcase \
	isXblob2.testcase \
	isXblob3.testcase \
	isXblob4.testcase \
	isXblob8.testcase \
	isXblob9.testcase 
