
EXTRA_DIST = closestpoint10.testcase \
	closestpoint11.testcase \
	closestpoint12.testcase \
	closestpoint13.testcase \
	closestpoint14.testcase \
	closestpoint15.testcase \
	closestpoint16.testcase \
	closestpoint17.testcase \
	closestpoint18.testcase \
	closestpoint19.testcase \
	closestpoint1.testcase \
	closestpoint20.testcase \
	closestpoint21.testcase \
	closestpoint22.testcase \
	closestpoint2.testcase \
	closestpoint3.testcase \
	closestpoint4.testcase \
	closestpoint5.testcase \
	closestpoint6.testcase \
	closestpoint7.testcase \
	closestpoint8.testcase \
	closestpoint9.testcase \
	coveredby1.testcase \
	coveredby2.testcase \
	covers1.testcase \
	covers2.testcase \
	covers_covered1.testcase \
	covers_covered2.testcase \
	covers_covered3.testcase \
	covers_covered4.testcase \
	covers_covered5.testcase \
	covers_covered6.testcase \
	covers_covered7.testcase \
	createtopo10.testcase \
	createtopo11.testcase \
	createtopo12.testcase \
	createtopo13.testcase \
	createtopo14.testcase \
	createtopo15.testcase \
	createtopo16.testcase \
	createtopo17.testcase \
	createtopo18.testcase \
	createtopo1.testcase \
	createtopo2.testcase \
	createtopo3.testcase \
	createtopo4.testcase \
	createtopo5.testcase \
	createtopo6.testcase \
	createtopo7.testcase \
	createtopo8.testcase \
	createtopo9.testcase \
	distance_geogr10.testcase \
	distance_geogr11.testcase \
	distance_geogr12.testcase \
	distance_geogr1.testcase \
	distance_geogr2.testcase \
	distance_geogr3.testcase \
	distance_geogr4.testcase \
	distance_geogr5.testcase \
	distance_geogr6.testcase \
	distance_geogr7.testcase \
	distance_geogr8.testcase \
	distance_geogr9.testcase \
	hausdorffdistance1.testcase \
	hausdorffdistance2.testcase \
	hausdorffdistance3.testcase \
	hausdorffdistance4.testcase \
	hausdorffdistance5.testcase \
	hausdorffdistance6.testcase \
	hausdorffdistance7.testcase \
	hexgrid10.testcase \
	hexgrid11.testcase \
	hexgrid12.testcase \
	hexgrid13.testcase \
	hexgrid14.testcase \
	hexgrid15.testcase \
	hexgrid16.testcase \
	hexgrid17.testcase \
	hexgrid18.testcase \
	hexgrid19.testcase \
	hexgrid1.testcase \
	hexgrid20.testcase \
	hexgrid21.testcase \
	hexgrid22.testcase \
	hexgrid23.testcase \
	hexgrid2.testcase \
	hexgrid3.testcase \
	hexgrid4.testcase \
	hexgrid5.testcase \
	hexgrid6.testcase \
	hexgrid7.testcase \
	hexgrid8.testcase \
	hexgrid9.testcase \
	interpolateequidistantpoint10.testcase \
	interpolateequidistantpoint11.testcase \
	interpolateequidistantpoint12.testcase \
	interpolateequidistantpoint13.testcase \
	interpolateequidistantpoint14.testcase \
	interpolateequidistantpoint1.testcase \
	interpolateequidistantpoint2.testcase \
	interpolateequidistantpoint3.testcase \
	interpolateequidistantpoint4.testcase \
	interpolateequidistantpoint5.testcase \
	interpolateequidistantpoint6.testcase \
	interpolateequidistantpoint7.testcase \
	interpolateequidistantpoint8.testcase \
	interpolateequidistantpoint9.testcase \
	interpolatepoint10.testcase \
	interpolatepoint11.testcase \
	interpolatepoint12.testcase \
	interpolatepoint13.testcase \
	interpolatepoint14.testcase \
	interpolatepoint1.testcase \
	interpolatepoint2.testcase \
	interpolatepoint3.testcase \
	interpolatepoint4.testcase \
	interpolatepoint5.testcase \
	interpolatepoint6.testcase \
	interpolatepoint7.testcase \
	interpolatepoint8.testcase \
	interpolatepoint9.testcase \
	linemerge10.testcase \
	linemerge1.testcase \
	linemerge2.testcase \
	linemerge3.testcase \
	linemerge4.testcase \
	linemerge5.testcase \
	linemerge6.testcase \
	linemerge7.testcase \
	linemerge8.testcase \
	linemerge9.testcase \
	linesnodes10.testcase \
	linesnodes11.testcase \
	linesnodes12.testcase \
	linesnodes13.testcase \
	linesnodes14.testcase \
	linesnodes15.testcase \
	linesnodes16.testcase \
	linesnodes17.testcase \
	linesnodes18.testcase \
	linesnodes19.testcase \
	linesnodes1.testcase \
	linesnodes2.testcase \
	linesnodes3.testcase \
	linesnodes4.testcase \
	linesnodes5.testcase \
	linesnodes6.testcase \
	linesnodes7.testcase \
	linesnodes8.testcase \
	linesnodes9.testcase \
	linesubstring10.testcase \
	linesubstring11.testcase \
	linesubstring12.testcase \
	linesubstring13.testcase \
	linesubstring14.testcase \
	linesubstring15.testcase \
	linesubstring16.testcase \
	linesubstring17.testcase \
	linesubstring18.testcase \
	linesubstring19.testcase \
	linesubstring1.testcase \
	linesubstring20.testcase \
	linesubstring21.testcase \
	linesubstring22.testcase \
	linesubstring23.testcase \
	linesubstring24.testcase \
	linesubstring25.testcase \
	linesubstring26.testcase \
	linesubstring2.testcase \
	linesubstring3.testcase \
	linesubstring4.testcase \
	linesubstring5.testcase \
	linesubstring6.testcase \
	linesubstring7.testcase \
	linesubstring8.testcase \
	linesubstring9.testcase \
	locatepoint10.testcase \
	locatepoint11.testcase \
	locatepoint12.testcase \
	locatepoint1.testcase \
	locatepoint2.testcase \
	locatepoint3.testcase \
	locatepoint4.testcase \
	locatepoint5.testcase \
	locatepoint6.testcase \
	locatepoint7.testcase \
	locatepoint8.testcase \
	locatepoint9.testcase \
	offsetcurve10.testcase \
	offsetcurve11.testcase \
	offsetcurve12.testcase \
	offsetcurve13.testcase \
	offsetcurve14.testcase \
	offsetcurve1.testcase \
	offsetcurve2.testcase \
	offsetcurve3.testcase \
	offsetcurve4.testcase \
	offsetcurve5.testcase \
	offsetcurve6.testcase \
	offsetcurve7.testcase \
	offsetcurve8.testcase \
	offsetcurve9.testcase \
	ringsnodes1.testcase \
	ringsnodes2.testcase \
	ringsnodes3.testcase \
	ringsnodes4.testcase \
	ringsnodes5.testcase \
	ringsnodes6.testcase \
	sharedpaths10.testcase \
	sharedpaths11.testcase \
	sharedpaths12.testcase \
	sharedpaths13.testcase \
	sharedpaths14.testcase \
	sharedpaths15.testcase \
	sharedpaths16.testcase \
	sharedpaths17.testcase \
	sharedpaths18.testcase \
	sharedpaths19.testcase \
	sharedpaths1.testcase \
	sharedpaths20.testcase \
	sharedpaths21.testcase \
	sharedpaths22.testcase \
	sharedpaths23.testcase \
	sharedpaths24.testcase \
	sharedpaths25.testcase \
	sharedpaths26.testcase \
	sharedpaths27.testcase \
	sharedpaths28.testcase \
	sharedpaths29.testcase \
	sharedpaths2.testcase \
	sharedpaths30.testcase \
	sharedpaths31.testcase \
	sharedpaths32.testcase \
	sharedpaths3.testcase \
	sharedpaths4.testcase \
	sharedpaths5.testcase \
	sharedpaths6.testcase \
	sharedpaths7.testcase \
	sharedpaths8.testcase \
	sharedpaths9.testcase \
	shortestline1.testcase \
	shortestline2.testcase \
	shortestline3.testcase \
	shortestline4.testcase \
	shortestline5.testcase \
	shortestline6.testcase \
	shortestline7.testcase \
	singlesidedbuffer11.testcase \
	singlesidedbuffer12.testcase \
	singlesidedbuffer13.testcase \
	singlesidedbuffer14.testcase \
	singlesidedbuffer15.testcase \
	singlesidedbuffer16.testcase \
	singlesidedbuffer17.testcase \
	singlesidedbuffer1.testcase \
	singlesidedbuffer2.testcase \
	singlesidedbuffer3.testcase \
	singlesidedbuffer4.testcase \
	singlesidedbuffer5.testcase \
	singlesidedbuffer6.testcase \
	singlesidedbuffer7.testcase \
	singlesidedbuffer8.testcase \
	singlesidedbuffer9.testcase \
	snap10.testcase \
	snap1.testcase \
	snap2.testcase \
	snap3.testcase \
	snap4.testcase \
	snap5.testcase \
	snap6.testcase \
	snap7.testcase \
	snap8.testcase \
	snap9.testcase \
	squaregrid10.testcase \
	squaregrid11.testcase \
	squaregrid12.testcase \
	squaregrid13.testcase \
	squaregrid14.testcase \
	squaregrid15.testcase \
	squaregrid16.testcase \
	squaregrid17.testcase \
	squaregrid18.testcase \
	squaregrid19.testcase \
	squaregrid1.testcase \
	squaregrid20.testcase \
	squaregrid21.testcase \
	squaregrid22.testcase \
	squaregrid23.testcase \
	squaregrid2.testcase \
	squaregrid3.testcase \
	squaregrid4.testcase \
	squaregrid5.testcase \
	squaregrid6.testcase \
	squaregrid7.testcase \
	squaregrid8.testcase \
	squaregrid9.testcase \
	trianggrid10.testcase \
	trianggrid11.testcase \
	trianggrid12.testcase \
	trianggrid13.testcase \
	trianggrid14.testcase \
	trianggrid15.testcase \
	trianggrid16.testcase \
	trianggrid17.testcase \
	trianggrid18.testcase \
	trianggrid19.testcase \
	trianggrid1.testcase \
	trianggrid20.testcase \
	trianggrid21.testcase \
	trianggrid22.testcase \
	trianggrid23.testcase \
	trianggrid2.testcase \
	trianggrid3.testcase \
	trianggrid4.testcase \
	trianggrid5.testcase \
	trianggrid6.testcase \
	trianggrid7.testcase \
	trianggrid8.testcase \
	trianggrid9.testcase \
	unaryunion1.testcase \
	unaryunion2.testcase \
	unaryunion3.testcase \
	unaryunion4.testcase \
	unaryunion5.testcase \
	unaryunion6.testcase \
	unaryunion7.testcase \
	unaryunion8.testcase 
