
EXTRA_DIST = transform10.testcase \
	transform11.testcase \
	transform12.testcase \
	transform13.testcase \
	transform14.testcase \
	transform15.testcase \
	transform16.testcase \
	transform17.testcase \
	transform18.testcase \
	transform19.testcase \
	transform1.testcase \
	transform20.testcase \
	transform21.testcase \
	transform2.testcase \
	transform3.testcase \
	transform4.testcase \
	transform5.testcase \
	transform6.testcase \
	transform7.testcase \
	transform8.testcase \
	transform9.testcase 
