
EXTRA_DIST = createrouterr.testcase \
	createrouting1.testcase \
	createrouting2.testcase \
	createrouting3.testcase \
	createrouting4.testcase \
	createrouting5.testcase \
	createrouting6.testcase \
	createrouting7.testcase \
	createrouting8.testcase \
	createrouting9.testcase \
	createrouting10.testcase \
	createrouting11.testcase \
	createrouting12.testcase \
	createrouting13.testcase \
	createrouting14.testcase 	
