
EXTRA_DIST = bufopts_endcap0.testcase \
	bufopts_endcap1.testcase \
	bufopts_endcap2.testcase \
	bufopts_endcap3.testcase \
	bufopts_endcap4.testcase \
	bufopts_endcap5.testcase \
	bufopts_endcap6.testcase \
	bufopts_endcap7.testcase \
	bufopts_join0.testcase\
	bufopts_join1.testcase \
	bufopts_join2.testcase \
	bufopts_join3.testcase \
	bufopts_join4.testcase \
	bufopts_join5.testcase \
	bufopts_join6.testcase \
	bufopts_join7.testcase \
	bufopts_join8.testcase \
	bufopts_mitrelimit0.testcase \
	bufopts_mitrelimit1.testcase \
	bufopts_mitrelimit2.testcase \
	bufopts_mitrelimit3.testcase \
	bufopts_mitrelimit4.testcase \
	bufopts_quadsegs0.testcase \
	bufopts_quadsegs1.testcase \
	bufopts_quadsegs2.testcase \
	bufopts_quadsegs3.testcase \
	bufopts_quadsegs4.testcase
