
EXTRA_DIST = bufopts_endcap0.testcase \
	bufopts_endcap1.testcase \
	bufopts_endcap2.testcase \
	bufopts_endcap3.testcase \
	bufopts_join0.testcase\
	bufopts_join1.testcase \
	bufopts_join2.testcase \
	bufopts_join4.testcase \
	bufopts_join3.testcase \
	bufopts_mitrelimit0.testcase \
	bufopts_mitrelimit1.testcase \
	bufopts_quadsegs0.testcase
