
EXTRA_DIST = frechetdistance1.testcase \
	frechetdistance2.testcase \
	frechetdistance3.testcase \
	frechetdistance4.testcase \
	frechetdistance5.testcase \
	frechetdistance6.testcase \
	frechetdistance7.testcase \
	frechetdistdens10.testcase \
	frechetdistdens1.testcase \
	frechetdistdens2.testcase \
	frechetdistdens3.testcase \
	frechetdistdens4.testcase \
	frechetdistdens5.testcase \
	frechetdistdens6.testcase \
	frechetdistdens7.testcase \
	frechetdistdens8.testcase \
	frechetdistdens9.testcase \
	frechetdistdens10.testcase \
	frechetdistdens1.testcase \
	frechetdistdens2.testcase \
	frechetdistdens3.testcase \
	frechetdistdens4.testcase \
	frechetdistdens5.testcase \
	frechetdistdens6.testcase \
	frechetdistdens7.testcase \
	frechetdistdens8.testcase \
	frechetdistdens9.testcase
