
EXTRA_DIST = decodeurl1.testcase \
	decodeurl2.testcase \
	decodeurl3.testcase \
	decodeurl4.testcase \
	decodeurl5.testcase \
	decodeurl6.testcase \
	decodeurl7.testcase \
	decodeurl8.testcase \
	decodeurl9.testcase \
	decodeurl10.testcase \
	decodeurl11.testcase \
	encodeurl1.testcase \
	encodeurl2.testcase \
	encodeurl3.testcase \
	encodeurl4.testcase \
	encodeurl5.testcase \
	encodeurl6.testcase \
	encodeurl7.testcase \
	encodeurl8.testcase \
	encodeurl9.testcase \
	encodeurl10.testcase \
	encodeurl11.testcase
	
