
EXTRA_DIST = projasstring1.testcase \
	projasstring2.testcase \
	projasstring3.testcase \
	projasstring4.testcase \
	projasstring5.testcase \
	projasstring6.testcase \
	projasstring7.testcase \
	projasstring8.testcase \
	projasstring9.testcase \
	projaswkt1.testcase \
	projaswkt2.testcase \
	projaswkt3.testcase \
	projaswkt4.testcase \
	projaswkt5.testcase \
	projaswkt6.testcase \
	projaswkt7.testcase \
	projaswkt8.testcase \
	projaswkt9.testcase \
	projaswkt10.testcase \
	projaswkt11.testcase \
	projaswkt12.testcase \
	projaswkt13.testcase \
	projaswkt14.testcase \
	projaswkt15.testcase \
	projaswkt16.testcase \
	projaswkt17.testcase \
	projaswkt18.testcase \
	projaswkt19.testcase \
	projaswkt20.testcase \
	projaswkt21.testcase \
	projguesswkt1.testcase \
	projguesswkt2.testcase \
	projguesswkt3.testcase \
	projguesswkt4.testcase \
	projguesswkt5.testcase \
	projguesswkt6.testcase \
	sridax1name6.testcase \
	sridax1orient6.testcase \
	sridax2name6.testcase \
	sridax2orient6.testcase \
	sriddatum6.testcase \
	sridprojection6.testcase \
	transform10.testcase \
	transform11.testcase \
	transform12.testcase \
	transform13.testcase \
	transform14.testcase \
	transform15.testcase \
	transform16.testcase \
	transform17.testcase \
	transform18.testcase \
	transform19.testcase \
	transform1.testcase \
	transform20.testcase \
	transform21.testcase \
	transform12.testcase \
	transform23.testcase \
	transform24.testcase \
	transform25.testcase \
	transform26.testcase \
	transform27.testcase \
	transform28.testcase \
	transform29.testcase \
	transform30.testcase \
	transform31.testcase \
	transform32.testcase \
	transform33.testcase \
	transform34.testcase \
	transform36.testcase \
	transform37.testcase \
	transform38.testcase \
	transform39.testcase \
	transform40.testcase \
	transform2.testcase \
	transform3.testcase \
	transform4.testcase \
	transform5.testcase \
	transform6.testcase \
	transform7.testcase \
	transform8.testcase \
	transform9.testcase \
	transformxy10.testcase \
	transformxy11.testcase \
	transformxy1.testcase \
	transformxy2.testcase \
	transformxy3.testcase \
	transformxy4.testcase \
	transformxy5.testcase \
	transformxy6.testcase \
	transformxy7.testcase \
	transformxy8.testcase \
	transformxy9.testcase \
	transformxyz10.testcase \
	transformxyz11.testcase \
	transformxyz12.testcase \
	transformxyz1.testcase \
	transformxyz2.testcase \
	transformxyz3.testcase \
	transformxyz4.testcase \
	transformxyz5.testcase \
	transformxyz6.testcase \
	transformxyz7.testcase \
	transformxyz8.testcase \
	transformxyz9.testcase  
