
EXTRA_DIST =  renamecolumn1.testcase \
	renamecolumn2.testcase \
	renamecolumn3.testcase \
	renamecolumn4.testcase \
	renamecolumn5.testcase \
	renamecolumn6.testcase \
	renamecolumn7.testcase \
	renamecolumn8.testcase \
	renamecolumn9.testcase \
	renamecolumn10.testcase \
	renamecolumn11.testcase \
	renamecolumn12.testcase \
	renamecolumn13.testcase \
	renamecolumn14.testcase \
	renamecolumn15.testcase \
	renamecolumn16.testcase \
	renamecolumn17.testcase \
	renamecolumn18.testcase \
	renametable1.testcase \
	renametable2.testcase \
	renametable3.testcase \
	renametable4.testcase \
	renametable5.testcase \
	renametable6.testcase \
	renametable7.testcase \
	renametable8.testcase \
	renametable9.testcase \
	renametable10.testcase \
	renametable11.testcase \
	renametable12.testcase \
	renametable13.testcase \
	renametable14.testcase
